appId: ${APP_ID}
---
- tapOn:
    id: onboarding.ward.import.toggle
- tapOn:
    id: home.ward.import.json.input
- inputText: ${WARD_INVITE_JSON}
- hideKeyboard
- tapOn:
    id: onboarding.ward.import.submit
- extendedWaitUntil:
    visible:
      id: deploy.account.deploy.press
    timeout: 120000
